--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  supabase_flutter: ^1.10.25
+  flutter_speed_dial: ^7.0.0
+  google_fonts: ^6.1.0
+  flutter_local_notifications: ^16.2.0
+  flutter_slidable: ^3.0.1
 
 dev_dependencies:
   flutter_test:
