--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_local_notifications: ^16.2.0
   flutter_slidable: ^3.0.1
+  flutter_native_splash: ^2.3.6
+
+flutter_native_splash:
+  fullscreen: true
+  background_image: "assets/TDB_SplashScreen.png"
+  android: true
+  ios: true
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/TDB_SplashScreen.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
