--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   flutter_local_notifications: ^16.2.0
   flutter_slidable: ^3.0.1
   flutter_native_splash: ^2.3.6
+  flutter_dotenv: ^5.1.0
+  flutter_secure_storage: ^9.0.0
+  intl: ^0.18.1
+  flutter_bloc: ^8.1.3
+  get: ^4.6.5
+  go_router: ^12.1.1
+  flutter_svg: ^2.0.9
 
 flutter_native_splash:
   fullscreen: true
@@ -73,6 +80,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/TDB_SplashScreen.png
+     - .env
+     - assets/provider/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
