--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   get: ^4.6.5
   go_router: ^12.1.1
   flutter_svg: ^2.0.9
+  loader_overlay: ^3.0.0
 
 flutter_native_splash:
   fullscreen: true
